# backend/app/types/user/list.go
@@ -3,7 +3,7 @@ package types
 type FollowListReq struct {
 	Page  int    `json:"page" example:"1" comment:"页数"`
 	Size  int    `json:"size" validate:"required,min=1,max=50" example:"10" comment:"每页数量"`
-	Order string `json:"order" validate:"required,oneof=time fans" example:"10" comment:"排序依据"`
+	Order string `json:"order" validate:"required,oneof=time fans" example:"time" comment:"排序依据"`
 	Desc  int    `json:"desc" example:"0" comment:"是否倒序"`
 }
 
@@ -20,7 +20,7 @@ type FollowListResp []BriefFollow
 type FansListReq struct {
 	Page  int    `json:"page" example:"1" comment:"页数"`
 	Size  int    `json:"size" validate:"required,min=1,max=50" example:"10" comment:"每页数量"`
-	Order string `json:"order" validate:"required,oneof=time fans" example:"10" comment:"排序依据"`
+	Order string `json:"order" validate:"required,oneof=time fans" example:"time" comment:"排序依据"`
 	Desc  int    `json:"desc" example:"0" comment:"是否倒序"`
 }
 
